--- a/src/pages/Nav.css
+++ b/src/pages/Nav.css
@@ -110,7 +110,7 @@
   }
 
   .nav-menu.active {
-    background-color: #ff005d;
+    background-color: #0091ff;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
