--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -6,6 +6,16 @@
   padding: 40px;
   align-items: center;
   padding: 0px 10%;
+  
+}
+
+body{
+  background-image: url("../../public/background.jpg"); /* The image used */
+  background-color: #cccccc; /* Used if the image is unavailable */
+  height: 500px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: repeat; /* Do not repeat the image */
+  background-size: cover;
 }
 
 .head1 {
@@ -29,14 +39,20 @@
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 3px 10px 0 rgba(104, 104, 104, 0.37);
     backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(60px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     font-family: "Outfit", sans-serif;
     align-items: center;
     justify-content: center;
   }
+.bgimage{
 
+  position: absolute;
+  width: 200px;
+  margin-top: 280px;
+
+}
 @media (max-width: 480px) {
   .head1 {
     font-size: 1rem;
@@ -83,4 +99,54 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+  display: flex;
+  justify-content: center; /* horizontally center */
+  align-items: center; /* vertically center */
+}
+
+.overlay-content {
+  background: rgb(255, 255, 255);
+  box-shadow: 0 3px 10px 0 rgba(104, 104, 104, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(60px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 20px;
+  margin-top: 50px;
+  border-radius: 5px;
+}
+
+.big-image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.big-image {
+  max-width: 90%;
+  max-height: 70vh;
+}
+
+.details {
+  text-align: center;
+  margin-top: 10px;
+}
+
+button {
+  margin-top: 10px;
+  background: rgba(5, 5, 5, 0);
+  box-shadow: 0 3px 10px 0 rgba(104, 104, 104, 0.37);
+  border-radius: 10px;
+  border: 1px solid rgb(255, 255, 255);
+  width: 20%;
+  padding: 15px;
 }
