--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,32 +1,46 @@
 .main-container {
+  font-family: 'Times New Roman', Times, serif;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
   padding: 40px;
   align-items: center;
-  padding: 0px 10%;
+  padding: 0px 0px;
   
+}
+
+.herosection{
+
+  width: 100%;
+  height: 600px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(60px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body{
   background-image: url("../../public/background.jpg"); /* The image used */
-  background-color: #cccccc; /* Used if the image is unavailable */
+  background-color: #fdfdfd; /* Used if the image is unavailable */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
-  background-repeat: repeat; /* Do not repeat the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
 }
 
 .head1 {
-  font-size: 2rem;
-  word-spacing: 40px;
+  font-size: 8vw;
+  line-height: 90%;
+  
 }
 
 .head2 {
-  font-size: 6rem;
+  font-size: 2vw;
   font-weight: bold;
-  line-height: 60%;
 }
 
 .design-card {
@@ -42,27 +56,12 @@ body{
     -webkit-backdrop-filter: blur(60px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
-    font-family: "Outfit", sans-serif;
-    align-items: center;
+
     justify-content: center;
   }
-.bgimage{
 
-  position: absolute;
-  width: 200px;
-  margin-top: 280px;
-
-}
 @media (max-width: 480px) {
-  .head1 {
-    font-size: 1rem;
-    word-spacing: 20px; /* Adjusted word spacing for smaller screens */
-  }
-  .head2 {
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 60%;
-  }
+ 
   .design-card {
     display: flex;
     width: 48%;
@@ -82,14 +81,11 @@ body{
 }
 
 .text {
-  padding: 30px;
-  font-family: "Outfit", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 100px;
-  width: 90%;
+  width: 50%;
 }
 
 .designs {
@@ -107,10 +103,10 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5); 
   display: flex;
-  justify-content: center; /* horizontally center */
-  align-items: center; /* vertically center */
+  justify-content: center; 
+  align-items: center; 
 }
 
 .overlay-content {
