--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,5 @@
 .main-container {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -12,9 +12,8 @@
 }
 
 .herosection{
-
   width: 100%;
-  height: 600px;
+  height: 930px;
   text-align: center;
   background: rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(20px);
@@ -46,28 +45,9 @@ body{
 
 .design-card {
     display: flex;
-    width: 24%;
-    margin-bottom: 20px;
-    padding-right:10px;
-    padding-left: 10px;
-    height:310px;
-    background: rgb(222, 222, 222);
-
+    width: 100%;
     justify-content: center;
   }
-
-@media (max-width: 480px) {
- 
-  .design-card {
-    display: flex;
-    width: 48%;
-    height: 140px;
-    margin-bottom: 20px;
-  
-}
-
-
-}
 
 .main-image {
   height: 70%;
@@ -75,6 +55,7 @@ body{
 }
 .image {
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .text {
@@ -92,8 +73,23 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    
 }
 
+.text-image{
+ display: flex;
+ flex-direction: column;
+ align-items:  center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 21%;
+  margin-bottom: 20px;
+  margin:20px;
+  padding:10px;
+  background-color: rgb(232, 232, 232);
+  border-radius: 6px;
+
+
+}
 .overlay {
   position: fixed;
   top: 0;
@@ -142,4 +138,22 @@ button {
   border: 1px solid rgb(255, 255, 255);
   width: 20%;
   padding: 15px;
+}
+
+
+@media (max-width: 480px) {
+ 
+  .text-image{
+ 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+    width: 40%;
+    margin-bottom: 20px;
+    margin:20px;
+    padding:10px;
+  }
+}
+
+.footer{
+  height: 300px;
 }
