--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -9,27 +9,32 @@
   align-items: center;
   padding: 0px 0px;
   
+  background: linear-gradient(45deg, #868686da, #fefefe6f, #c5c5c4);
+  background-size: 50% 50%;
+  animation: animatedGradient 5s ease infinite;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
 
-.herosection{
+@keyframes animatedGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.herosection {
   width: 100%;
   height: 930px;
   text-align: center;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(60px);
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-body{
-  background-image: url("../../public/background.jpg"); /* The image used */
-  background-color: #fdfdfd; /* Used if the image is unavailable */
-  height: 500px; /* You must set a specified height */
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover;
 }
 
 .head1 {
