--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,19 +1,11 @@
 .main-container {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 40px;
   align-items: center;
-  padding: 0px 0px;
-  
-  background: linear-gradient(45deg, #868686da, #fefefe6f, #c5c5c4);
-  background-size: 50% 50%;
-  animation: animatedGradient 5s ease infinite;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
 }
 
 @keyframes animatedGradient {
@@ -35,12 +27,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(45deg,  #fefefe6f, #c5c5c4,#c5c5c5da);
+  background-size: 50% 100%;
+  animation: animatedGradient 20s ease infinite;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
 }
 
 .head1 {
   font-size: 8vw;
   line-height: 90%;
-  
 }
 
 .head2 {
@@ -49,17 +45,19 @@
 }
 
 .design-card {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-  }
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
 
 .main-image {
-  height: 70%;
-  margin-left: 10%;
+  width: 100%;
+
+
 }
 .image {
-  width: 100%;
+  margin-left: 20%;
+  height: 70%;
   margin-bottom: 20px;
 }
 
@@ -72,28 +70,25 @@
 }
 
 .designs {
-    width: 80%;
+  width: 80%;
 }
-.all-designs{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    
+.all-designs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.text-image{
- display: flex;
- flex-direction: column;
- align-items:  center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.text-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   width: 21%;
   margin-bottom: 20px;
-  
-  padding:10px;
+
+  padding: 10px;
   background-color: rgb(232, 232, 232);
   border-radius: 6px;
-
-
 }
 .overlay {
   position: fixed;
@@ -101,10 +96,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay-content {
@@ -145,18 +140,22 @@ button {
   padding: 15px;
 }
 
-
 @media (max-width: 500px) {
- 
-  .text-image{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  .text-image {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
     font-size: 12px;
     width: 39%;
     margin-bottom: 20px;
-    padding:10px;
+    padding: 10px;
+  }
+  .image {
+    margin-left: 10%;
+    height: 70%;
+    margin-bottom: 20px;
   }
 }
 
-.footer{
+.footer {
   height: 300px;
 }
