--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(45deg,  #fefefe6f, #c5c5c4,#c5c5c5da);
+  background: linear-gradient(45deg,  #fefefe6f, #c5c5c4,#cfcfcfda);
   background-size: 50% 100%;
   animation: animatedGradient 20s ease infinite;
   backdrop-filter: blur(20px);
@@ -83,6 +83,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight:bold;
   width: 21%;
   margin-bottom: 20px;
 
