--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,6 @@
 .main-container {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Raleway Dots", sans-serif;
+  font-weight: bold;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -83,8 +84,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-weight:bold;
+  font-family: "Raleway Dots", sans-serif;
+  font-weight: bold;
   width: 21%;
   margin-bottom: 20px;
   background-color: rgb(255, 255, 255);
