--- a/src/pages/Nav.css
+++ b/src/pages/Nav.css
@@ -1,4 +1,5 @@
 .navbar {
+
   height: 80px;
   display: flex;
   justify-content: center;
@@ -13,7 +14,8 @@
   -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  font-family: "Outfit", sans-serif;
+    font-family: "Raleway Dots", sans-serif;
+  font-weight: bold;
 }
 
 .buttons {
