--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -145,8 +145,7 @@ button {
 
 @media (max-width: 500px) {
   .text-image {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: "Raleway Dots", sans-serif;
     font-size: 12px;
     width: 39%;
     margin-bottom: 20px;
