--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,5 @@
 .main-container {
-  font-family: "Raleway Dots", sans-serif;
-  font-weight: bold;
+  font-family: "Space Mono", monospace;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -84,8 +83,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Raleway Dots", sans-serif;
-  font-weight: bold;
+  font-family: "Space Mono", monospace;
   width: 21%;
   margin-bottom: 20px;
   background-color: rgb(255, 255, 255);
@@ -145,7 +143,7 @@ button {
 
 @media (max-width: 500px) {
   .text-image {
-    font-family: "Raleway Dots", sans-serif;
+    font-family: "Space Mono", monospace;
     font-size: 12px;
     width: 39%;
     margin-bottom: 20px;
