--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -6,7 +6,7 @@
   align-items: center;
   width: 100%;
   align-items: center;
-  background-color: rgb(241, 241, 241);
+  background-color: rgb(247, 247, 247);
 }
 
 @keyframes animatedGradient {
@@ -72,6 +72,7 @@
 
 .designs {
   width: 80%;
+  margin-bottom: 20px;
 }
 .all-designs {
   display: flex;
@@ -86,7 +87,8 @@
   font-family: "Space Mono", monospace;
   width: 21%;
   margin-bottom: 20px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(248, 248, 248);
+  border: 1px solid rgb(161, 161, 161);
   padding: 10px;
  
   border-radius: 6px;
